[package]
name = "pronto-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["macros"]}
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.107"
serde = { version = "1.0", features = ["derive"] }
axum-extra = "0.8.0"
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
